bugFixed : aligned like-button and text-card correctly

--- a/styles.css
+++ b/styles.css
@@ -214,16 +214,22 @@ body.dark-mode h1 {
 
 .details {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
+  align-items: flex-end;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
 }
 /* Like Button */
 .fav-btn {
   display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
   height: 100%;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  font-size: 3rem;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 @keyframes favme-anime {
